# aws-ecs-iac-template

./: .dockerignore  .env.infra.example  .gitignore  Dockerfile  README.md  cloudformation.yaml  pyproject.toml  run.py  scripts.sh
app/: .env.example  index.py
